<resources>
    <string name="app_name">AniDex</string>
    <string name="title">Title:</string>
    <string name="synopsis">Plot Summary:</string>
    <string name="settings">Sorting</string>
    <string name="rating">User Rating</string>
    <string name="release_date">Release Date:</string>
    <string name="end_date">End Date:</string>
    <string name="enddate_placeholder">-</string>
    <string name="sorting_label">Sort</string>
    <string name="sortingKey">sortKey</string>
    <string name="pref_by_popularity">Most Popular</string>
    <string name="pref_airing">Now Airing</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="title_pref">Sort By</string>
    <string name="logo">MyAnimeList</string>
    <string name="score">Score:</string>
    <string name="rank">Rank:</string>
    <string name="status">Status:</string>
    <string name="genres">Genres</string>
    <string name="trailer">Trailer:</string>
    <string name="ranklabel">#%1$s</string>
    <string name="datestring">%1$s %2$d, %3$d</string>
    <string name="loadingdesc">Fetching title details. Please wait…</string>
    <string name="toolbardetailtitle">%1$s\n%2$s</string>
    <string name="episodecount">%1$seps</string>
    <string name="stats">Stats:</string>
    <string name="YouTube">YouTube</string>
    <string name="characters">Characters:</string>
    <string name="menuanime">Anime</string>
    <string name="menumanga">Manga</string>
    <string name="menutop">Top</string>
    <string name="filter">Filter</string>
    <string name="airing_filter">Airing</string>
    <string name="pref_upcoming">Upcoming</string>
    <string name="switchsort">Sort:</string>
    <string name="ascending">Asc</string>
    <string name="descending">Desc</string>
    <string name="foryou">For You</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="rec_welcome">Our recommendations: </string>
    <string-array name="types_array">
        <item>Anime</item>
        <item>Manga</item>
    </string-array>
    <string-array name="requests_array">
        <item>All-Time</item>
        <item>Airing</item>
        <item>Upcoming</item>
    </string-array>
    <string-array name="orderby_array">
        <item>Order By</item>
        <item>Title</item>
        <item>Score</item>
    </string-array>
</resources>
